--- a/charts/nifikop/crds/nifi.konpyutaika.com_nifiusers.yaml
+++ b/charts/nifikop/crds/nifi.konpyutaika.com_nifiusers.yaml
@@ -43,7 +43,7 @@ spec:
                       - /system
                       - /flow
                       - /controller
-                      - /parameter-context
+                      - /parameter-contexts
                       - /provenance
                       - /restricted-components
                       - /policies
