Update Karpenter to version 0.37.3 and add interruption queue key

--- a/charts/karpenter/templates/deployment.yaml
+++ b/charts/karpenter/templates/deployment.yaml
@@ -144,6 +144,10 @@ spec:
             - name: INTERRUPTION_QUEUE
               value: "{{ . }}"
           {{- end }}
+          {{- with .Values.settings.interruptionQueueKey }}
+            - name: INTERRUPTION_QUEUE_KEY
+              value: "{{ . }}"
+          {{- end }}
           {{- with .Values.settings.reservedENIs }}
             - name: RESERVED_ENIS
               value: "{{ . }}"
