--- a/charts/daemonset-taint-controller/templates/rbac.yaml
+++ b/charts/daemonset-taint-controller/templates/rbac.yaml
@@ -15,6 +15,9 @@ rules:
 - apiGroups: [""]
   resources: ["configmaps"]
   verbs: ["create", "delete", "get", "list", "update", "watch"]
+- apiGroups: [""]
+  resources: ["events"]
+  verbs: ["create", "update", "patch"]
 - apiGroups: ["coordination.k8s.io"]
   resources: ["leases"]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
